updated travis-ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ solution: MortgageCalculator.sln
 install:
 - dotnet restore
 
-scripts:
+script:
 - dotnet build
 - dotnet test MortgageCalculator.Tests --filter Category=integration
