--- a/MortgageCalculator/MortgageCalculator.Console.csproj
+++ b/MortgageCalculator/MortgageCalculator.Console.csproj
@@ -10,4 +10,8 @@
     <OutputPath>bin\Debug\</OutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MortgageCalculator.Core\MortgageCalculator.Core.csproj" />
+  </ItemGroup>
+
 </Project>
